--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6245,6 +6245,17 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 
 
+-------------------------------------------------------------------
+6.00.26:
+
+-BUG FIX: TBD
+
+-User experience on daily background tasks (should no longer 'creep' up / down for time-of-day run)
+
+-------------------------------------------------------------------
+
+
+
 
 
 
