--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,6 +10,22 @@ NEXT SCHEDULED WORK SESSIONS (*BOTH* DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Add 2FA to all admin login / reset / register forms
+
+
+Move news feeds config into it's own section.
+
+
+Change the "other apis" section to "External APIs", AND move comms APIs into it (but add a notice atop comms section about comms APIs moved over there).
+
+
+Add to news feeds:
+https://www.youtube.com/channel/UCjsgQKPpR7ubPQhPqjf8kyA
+
+
+Add to new feeds: https://stepdata.substack.com/
+
+
 Add ALTNFTS asset, based on a user's primary currency (like MISCASSETS)
 
 
@@ -86,19 +102,6 @@ Add feature to address balance tracker plugin to set minimum time to wait before
 
 
 Merge System stats / access stats / app logs into one area called: System & App Monitoring. Add horizontal tabs a top of this area, for each subsection.
-
-
-Integrate google authenticator / microsoft authenticator / authy / etc BEING REQUIRED TO CHANGE THE ADMIN SECURITY LEVEL (and also make it OPTIONAL for login security):
-
-https://www.google.com/search?q=php+one+time+password+google+authenticator
-
-https://www.rafaelwendel.com/en/2021/05/two-step-verification-with-php-and-google-authenticator/
-
-https://github.com/sonata-project/GoogleAuthenticator
-
-https://stackoverflow.com/questions/tagged/sonata
-
-Require activating and using 2FA to even VIEW the security settings page.
 
 
 When importing bootstrap price chart data in on XAMMP for Windows, WHEN SETUP FOR 15 MINUTE TASK SCHEDULER INTERVALS INSTEAD OF THE DEFAULT 20 MINUTE INTERVALS, all chart data seemed correct EXCEPT for 2 week data. Try and replicate this on other setups, and review the auto-reset trigger / directory deletion logic for any possible issues, as well as the light chart creation logic. I SUSPECT THE LATTER.
