--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6254,11 +6254,17 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: Miscellaneous fixes
 
--User experience on daily background tasks (should no longer 'creep' up / down for time-of-day run)
-
 -Added OPTIONAL Two-Factor Security feature for admin area (Google Authenticator / Microsoft Authenticator, Authy, etc)
 
+-User experience on daily background tasks (should no longer 'creep' up / down for time-of-day run)
+
+-Added 'ALTNFTS' asset, for tracking alternate NFTs in a user's selected currency
+
+-Updated the DEMO asset markets / news feeds
+
 -Miscellaneous user experience improvements
+
+-Code optimization / cleanup
 
 -------------------------------------------------------------------
 
