--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6248,11 +6248,15 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 -------------------------------------------------------------------
 6.00.26:
 
--BUG FIX: Fixed setting 'interface_login' in the Admin SECURITY Config (an issue in Windows 10 / 11 only...it now works when entering your login)
+-BUG FIX: Fixed setting 'interface_login' in the Admin SECURITY Config (an issue on Windows 10 / 11 only...it now works when entering your login)
 
 -BUG FIX: Fixed issues with the primary currency registering as the asset used for the value of 'MISCASSETS' (on the portfolio page)
 
 -BUG FIX: Fixed chart storage / price alerts from crashing, when a market has no trade volume data available (sorry!)
+
+-BUG FIX: Fixed admin login alerts (via email / text / telegram / Alexa) for ALL Desktop Editions
+
+-BUG FIX: Fixed Telegram alerts in the Windows Desktop Edition (sorry!)
 
 -BUG FIX: Miscellaneous fixes
 
